# ResearchPapersFetcher

./: .gitignore  pyproject.toml  readme.md
get_papers_list/: cli.py  exporter.py  filters.py  llm_classifier.py  pubmed_client.py  pubmend_client.py
tests/: regexVSllmTest.py
