[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"